# taskflow-be

./: Dockerfile  docker-compose.yaml  package.json  pnpm-lock.yaml
task-manager-api/: .env  alembic.ini  pyproject.toml
task-manager-api/migrations/versions/: 1ca916101d53_add_column_auth_provider_users_table.py  2b4df376cc4f_add_current_refresh_token_users.py  59a09ee88690_create_table_project_participants.py  70ebc4bf02eb_create_users_table.py  bdddfb5cb2c7_create_table_projects.py
task-manager-api/src/: main.py
task-manager-api/src/app/core/: app.py  cors.py  db.py  dependencies.py  exception_handler.py  logger.py  server.py
task-manager-api/src/app/core/configs/: core_config.py  db_config.py  google_oauth2_config.py  jwt_config.py
task-manager-api/src/app/core/context/: user_context.py
task-manager-api/src/app/core/exceptions/: auth_exception.py  common_exception.py  document_exception.py  internal_server_exception.py  project_exception.py
task-manager-api/src/app/core/middlewares/: auth_middleware.py
task-manager-api/src/app/core/schemas/: app_response_schema.py
task-manager-api/src/app/core/storage/: storage_service.py
task-manager-api/src/taskmanagerapi/: main.py
task-manager-api/src/taskmanagerapi/core/: app.py  db.py  dependencies.py  exception_handler.py  logger.py  server.py
task-manager-api/src/taskmanagerapi/core/configs/: core_config.py  gcs_config.py  logger_config.py
task-manager-api/src/taskmanagerapi/core/exceptions/: app_exception.py  auth_exception.py  common_exception.py  document_exception.py  internal_server_exception.py  (+1 more)
(+222 files in other folders)
